--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <p> I have no paper !! </p>
+    <p> 
+    <img src="cry.jpg" width="365" height="120" /> 
+    </p>
 </body>
 </html>
